# adc-aiopg

./: .gitignore  README.md  pyproject.toml  setup.py
adc_aiopg/: enum.py  types.py
adc_aiopg/repository/: dao.py  entity_db_repository.py
aiopg/: types.py
aiopg/repository/: db_repository.py  entity_db_repository.py
tests/: conftest.py  test_crud.py  test_dao_class.py  test_descriptor.py  test_migrations.py  test_pool_manager.py  test_query.py
