[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adc-aiopg"
version = "1.0.0"
description = "Async PostgreSQL client with connection pooling, query builder, and DAO pattern"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["postgresql", "async", "asyncpg", "sqlalchemy", "dao", "orm"]
authors = [
    { name = "ascet.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Database",
]
dependencies = [
    "asyncpg>=0.27.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
    "pydantic>=2.0.0",
    "alembic>=1.11.0",
    "ujson>=5.10.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy-utils>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres]>=4.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.284",
]

[project.urls]
Homepage = "https://github.com/ascet-dev/adc-aiopg"
Repository = "https://github.com/ascet-dev/adc-aiopg"
Issues = "https://github.com/ascet-dev/adc-aiopg/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["adc_aiopg"]
